--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,27 @@
-body {
-  font-family: Bebas Neue, sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Oswald:wght@500&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+  border: none;
 }
+
+body {
+  font-family: Open Sans, sans-serif;
+  font-weight: 300;
+  color: #36454f;
+}
+
+/* headings and logo */
+
+h1, h2 {
+  font-family: Oswald, sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: #252525;
+}
+
+#logo {
+  float: left;
+  font-size: 400%;
+}
+
