--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,3 +55,12 @@ h1, h2 {
 .active {
   border-bottom: 1px solid #36454f;
 }
+
+/* fight-glove photo */
+
+#fight-glove {
+  height: 600px;
+  width: 100%;
+  background: url('../../photos/fight-glove.jpg') no-repeat center center;
+  background-size: cover; 
+}
