--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,3 +162,68 @@ footer {
   color: #FEE715FF;
 }
 
+/* boxing image */
+
+#boxing-outer {
+  height: 800px;
+  width: 100%;
+  overflow: visible;
+  }
+
+#boxing {
+  height: 1100px;
+  width: 100%;
+  background: url('../../images/boxing.jpg') no-repeat center center;
+  background-size: cover; 
+
+  /* enlivens page load with zoom animation */
+
+  animation-name: fight-glove-zoom;
+  animation-duration: 1.5s;
+  animation-fill-mode: backwards;
+}
+
+/* level of zoom for boxing image */
+
+@keyframes boxing-zoom {
+  from {
+    transform: scale(1.1);
+  }
+  to{
+    transform: scale(1);
+  }
+  }
+
+/* member reviews */
+
+#reviews div {
+    background-color: rgba(0, 0, 0, 0.627);
+
+    font-size: 90%;
+    width: 20%;
+    height: 300px;
+    float: left;
+
+    padding: 30px 0 0 10px;
+
+    text-align: center;
+    border: 2px solid black;
+    box-sizing: border-box;
+}
+
+#reviews h2, h4 {
+    color: orange;
+
+    padding-bottom: 20px;
+}
+
+#reviews h3 {
+  font-family: Russo One, sans-serif;
+  color: #FEE715FF;
+
+  padding-bottom: 20px;
+}
+
+#reviews h5 {
+  color: #FEE715FF;
+}
