--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,7 +228,7 @@ footer {
   letter-spacing: 1px;
   
   width: 450px;
-  height: 340px;
+  height: 410px;
   
   padding-top: 10px;
   padding-left: 20px;
@@ -286,4 +286,98 @@ footer {
 
 #reviews h5 {
   color: #FEE715FF;
+}
+
+/* signup image */
+
+#signup-outer {
+  height: 800px;
+  width: 100%;
+  overflow: visible;
+  }
+
+  #signup {
+    height: 800px;
+    width: 100%;
+    background: url('../../images/signup.jpg') no-repeat center center;
+    background-size: cover; 
+  
+    /* enlivens page load with zoom animation */
+    animation-name: fight-glove-zoom;
+    animation-duration: 1.5s;
+    animation-fill-mode: backwards;
+  }
+  
+  /* level of zoom for fight glove image */
+  
+  @keyframes fight-glove-zoom {
+    from {
+      transform: scale(1.1);
+    }
+    to{
+      transform: scale(1);
+    }
+  }
+
+  /* sign up form */
+
+  .container {
+    margin: 0 auto;
+    width: 500px;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 50px;
+    border-radius: 10px;
+    color: #fff;
+    text-align: center;
+    margin-top: 200px;
+
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+form {
+	display: flex;
+  flex-direction: column;
+}
+
+h1 {
+	margin-bottom: 20px;
+	font-size: 36px;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+}
+
+p {
+	margin-bottom: 10px;
+  color: orange;
+  font-family: Russo One, sans-serif;
+	font-size: 24px;
+}
+
+input[type="email"] {
+	margin-bottom: 20px;
+  color: #fff;
+	padding: 10px;
+	border: none;
+	border-radius: 5px;
+  font-family: Open Sans, sans-serif;;
+	font-size: 18px;
+}
+
+button[type="submit"] {
+	background-color: orange;
+	color: #fff;
+	padding: 10px;
+	border: none;
+	border-radius: 5px;
+  font-family: Russo One, sans-serif;
+	font-size: 18px;
+	cursor: pointer;
+	transition: background-color 0.3s;
+}
+
+button[type="submit"]:hover {
+	background-color: #ffdb4d;
 }
