--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -296,7 +296,7 @@ footer {
   overflow: visible;
   }
 
-  #signup {
+#signup {
     height: 800px;
     width: 100%;
     background: url('../../images/signup.jpg') no-repeat center center;
@@ -308,9 +308,9 @@ footer {
     animation-fill-mode: backwards;
   }
   
-  /* level of zoom for fight glove image */
+/* level of zoom for fight glove image */
   
-  @keyframes fight-glove-zoom {
+@keyframes fight-glove-zoom {
     from {
       transform: scale(1.1);
     }
@@ -319,9 +319,9 @@ footer {
     }
   }
 
-  /* sign up form */
+/* sign up form */
 
-  .container {
+.container {
     margin: 0 auto;
     width: 500px;
     background-color: rgba(0, 0, 0, 0.5);
@@ -380,4 +380,148 @@ button[type="submit"] {
 
 button[type="submit"]:hover {
 	background-color: #ffdb4d;
+}
+
+/* Media queries */
+
+
+/* Media query for smaller screens */
+@media only screen and (max-width: 768px) {
+  h1 {
+    font-size: 2rem;
+  }
+
+  #menu, #logo {
+    line-height: 50px;
+  }
+
+  #menu li {
+    margin-right: 10px;
+  }
+
+  #fight-glove-outer {
+    height: 400px;
+  }
+
+  #cover-text {
+    width: 200px;
+    height: 100px;
+    font-size: 100%;
+    padding-top: 10px;
+    padding-left: 10px;
+    bottom: 10px;
+    left: 50px;
+  }
+
+  #boxing-outer {
+    height: 400px;
+  }
+
+  #cover-text2 {
+    width: 300px;
+    height: 200px;
+    font-size: 50%;
+    padding-top: 5px;
+    padding-left: 5px;
+    bottom: 5px;
+    left: 20px;
+  }
+
+  .cover-text3 {
+    width: 200px;
+    height: 200px;
+    font-size: 50%;
+    padding-top: 5px;
+    padding-left: 5px;
+    top: 50px;
+    right: 10px;
+  }
+}
+
+/* Media query for medium screens */
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
+  #menu, #logo {
+    line-height: 70px;
+  }
+
+  #menu li {
+    margin-right: 15px;
+  }
+
+  #fight-glove-outer {
+    height: 600px;
+  }
+
+  #cover-text {
+    width: 300px;
+    height: 150px;
+    font-size: 140%;
+    padding-top: 20px;
+    padding-left: 20px;
+    bottom: 20px;
+    left: 70px;
+  }
+
+  #boxing-outer {
+    height: 600px;
+  }
+
+  #cover-text2 {
+    width: 400px;
+    height: 250px;
+    font-size: 70%;
+    padding-top: 10px;
+    padding-left: 10px;
+    bottom: 10px;
+    left: 30px;
+  }
+
+  .cover-text3 {
+    width: 300px;
+    height: 300px;
+    font-size: 70%;
+    padding-top: 10px;
+    padding-left: 10px;
+    top: 100px;
+    right: 30px;
+  }
+}
+
+/* for larger to medium screens size from 1200px wide and down*/ 
+
+@media screen and (max-width: 1200px) {
+  #club-ethos {
+    width: 65%;
+    height: 1200px;
+    margin: 0 auto;
+  }
+
+  #welcome {
+    padding: 30px 0;
+    margin: 0;
+  }
+
+  #left-about, #right-about {
+    width: 100%;
+    float: none;
+    padding: 0;
+  }
+
+  #center-about {
+    clear: both;
+    width: 100%;
+    float: none;
+    padding: 0;
+  }
+
+  #times > div {
+    width: 100%;
+    clear: both;
+    height: 150px;
+    padding: 0;
+  }
+
+  hr {
+    display: none;
+  }
 }
